# cpex-plugins

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  Makefile  README.md  SECURITY.md  TESTING.md  deny.toml
.cargo/: mutants.toml
.config/: nextest.toml
.github/workflows/: ci-install-built-wheel.yaml  ci-plugin-catalog.yaml  ci-rate-limiter.yaml  ci-rust-python-package.yaml  ci-scaffold-generator.yaml  pypi-rate-limiter.yaml  release-rust-python-package.yaml
crates/framework_bridge/: Cargo.toml
crates/framework_bridge/src/: lib.rs
plugins/rust/python-package/encoded_exfil_detection/: Cargo.toml  Makefile  README.md  pyproject.toml
plugins/rust/python-package/encoded_exfil_detection/benches/: encoded_exfil_detection.rs
plugins/rust/python-package/encoded_exfil_detection/cpex_encoded_exfil_detection/: __init__.py  __init__.pyi  encoded_exfil_detection.py  plugin-manifest.yaml
plugins/rust/python-package/encoded_exfil_detection/cpex_encoded_exfil_detection/encoded_exfil_detection_rust/: __init__.pyi
plugins/rust/python-package/encoded_exfil_detection/src/: lib.rs
plugins/rust/python-package/encoded_exfil_detection/tests/: conftest.py  test_plugin.py
plugins/rust/python-package/encoded_exfil_detection/tests/mcpgateway_mock/plugins/: framework.py
plugins/rust/python-package/pii_filter/: Cargo.toml  Makefile  README.md  pyproject.toml
plugins/rust/python-package/pii_filter/benchmarks/: compare_pii_filter.py
plugins/rust/python-package/pii_filter/cpex_pii_filter/: __init__.py  __init__.pyi  pii_filter.py  plugin-manifest.yaml
plugins/rust/python-package/pii_filter/cpex_pii_filter/pii_filter_rust/: __init__.pyi
plugins/rust/python-package/pii_filter/src/: config.rs  detector.rs  lib.rs  masking.rs  patterns.rs  plugin.rs
plugins/rust/python-package/pii_filter/tests/: test_plugin.py
plugins/rust/python-package/pii_filter/tests/mcpgateway_mock/: __init__.py
plugins/rust/python-package/pii_filter/tests/mcpgateway_mock/plugins/: __init__.py  framework.py
plugins/rust/python-package/rate_limiter/: Cargo.toml  Makefile  README.md  pyproject.toml
plugins/rust/python-package/rate_limiter/cpex_rate_limiter/: __init__.py  __init__.pyi  plugin-manifest.yaml  rate_limiter.py
plugins/rust/python-package/rate_limiter/cpex_rate_limiter/rate_limiter_rust/: __init__.pyi
plugins/rust/python-package/rate_limiter/src/: clock.rs  config.rs  engine.rs  lib.rs  memory.rs  plugin.rs  redis_backend.rs
plugins/rust/python-package/rate_limiter/tests/: conftest.py  test_config.py  test_parse_rate.py  test_plugin.py
plugins/rust/python-package/rate_limiter/tests/integration/: test_rate_limiter.py
plugins/rust/python-package/rate_limiter/tests/mcpgateway_mock/plugins/: framework.py
plugins/rust/python-package/retry_with_backoff/: Cargo.toml  Makefile  README.md  deny.toml  pyproject.toml
plugins/rust/python-package/retry_with_backoff/cpex_retry_with_backoff/: __init__.py  __init__.pyi  plugin-manifest.yaml  retry_with_backoff.py
plugins/rust/python-package/retry_with_backoff/cpex_retry_with_backoff/retry_with_backoff_rust/: __init__.pyi
plugins/rust/python-package/retry_with_backoff/src/: lib.rs
plugins/rust/python-package/retry_with_backoff/tests/: conftest.py  test_plugin.py
plugins/rust/python-package/retry_with_backoff/tests/mcpgateway_mock/: __init__.py  config.py
plugins/rust/python-package/retry_with_backoff/tests/mcpgateway_mock/common/: __init__.py  models.py
plugins/rust/python-package/retry_with_backoff/tests/mcpgateway_mock/plugins/: __init__.py  framework.py
plugins/rust/python-package/secrets_detection/: Cargo.toml  Makefile  README.md  pyproject.toml
plugins/rust/python-package/secrets_detection/benches/: secrets_detection.rs
plugins/rust/python-package/secrets_detection/cpex_secrets_detection/: __init__.py  __init__.pyi  plugin-manifest.yaml  secrets_detection.py
plugins/rust/python-package/secrets_detection/cpex_secrets_detection/secrets_detection_rust/: __init__.pyi
plugins/rust/python-package/secrets_detection/src/: config.rs  lib.rs  object_model.rs  patterns.rs  plugin.rs  scanner.rs
plugins/rust/python-package/secrets_detection/src/scanner/: cycle_rewrite.rs  python_scan.rs  text_scan.rs
plugins/rust/python-package/secrets_detection/src/scanner/python_scan/: tests.rs
plugins/rust/python-package/secrets_detection/tests/: test_plugin.py
plugins/rust/python-package/secrets_detection/tests/mcpgateway_mock/plugins/: framework.py
plugins/rust/python-package/url_reputation/: Cargo.toml  Makefile  README.md  compare_performance.py  pyproject.toml
plugins/rust/python-package/url_reputation/benches/: url_validation.rs
plugins/rust/python-package/url_reputation/cpex_url_reputation/: __init__.py  __init__.pyi  plugin-manifest.yaml  url_reputation.py
plugins/rust/python-package/url_reputation/cpex_url_reputation/url_reputation_rust/: __init__.py  __init__.pyi
plugins/rust/python-package/url_reputation/src/: engine.rs  lib.rs
plugins/rust/python-package/url_reputation/tests/: test_plugin.py  test_url_reputation.py
plugins/rust/python-package/url_reputation/tests/mcpgateway_mock/: __init__.py
plugins/rust/python-package/url_reputation/tests/mcpgateway_mock/plugins/: framework.py
plugins/tests/: conftest.py  plugin_hooks.py  pytest.ini  real_cpex_imports.py
plugins/tests/encoded_exfil_detection/: test_gateway_integration.py  test_integration.py
plugins/tests/pii_filter/: test_integration.py
plugins/tests/rate_limiter/: test_config_integration.py  test_integration.py  test_parse_rate_integration.py  test_redis_integration.py
plugins/tests/retry_with_backoff/: test_integration.py
plugins/tests/secrets_detection/: helpers.py  test_hook_dispatch.py  test_hook_smoke.py  test_integration.py  test_plugin_hook_results.py  (+2 more)
rate_limiter/: Cargo.toml  pyproject.toml
rate_limiter/cpex_rate_limiter/: __init__.py  plugin-manifest.yaml
tests/: test_install_built_wheel.py  test_plugin_catalog.py
tools/: install_built_wheel.py  plugin_catalog.py  validate_ci_selection.py
(+7 files in other folders)
