[package]
name = "cpex_framework_bridge"
version = "0.1.0"
edition = "2024"
authors = ["ContextForge Contributors"]
license = "Apache-2.0"
repository = "https://github.com/IBM/cpex-plugins"
description = "Shared PyO3 framework object bridge helpers for CPEX Rust plugins"

[lib]
name = "cpex_framework_bridge"
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.28.2", features = ["abi3-py311"] }
