[package]
name = "encoded_exfil_detection"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance encoded exfiltration detection for MCP Gateway"

[lib]
name = "encoded_exfil_detection_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
base64 = "0.22"
cpex_framework_bridge = { path = "../../../../crates/framework_bridge" }
log = { workspace = true }
pyo3 = { workspace = true }
pyo3-log = { workspace = true }
pyo3-stub-gen = { workspace = true }
regex = "1.12"
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "encoded_exfil_detection"
harness = false
