[package]
name = "pii_filter"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust-backed PII detection and masking plugin for MCP Gateway"

[lib]
name = "pii_filter_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
cpex_framework_bridge = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true }
pyo3-log = { workspace = true }
pyo3-stub-gen = { workspace = true }
regex = { workspace = true }
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "pii_filter"
harness = false
