[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "cpex-pii-filter"
dynamic = ["version"]
description = "Rust-backed PII detection and masking plugin for MCP Gateway"
authors = [{ name = "ContextForge Contributors" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cpex>=0.1.0rc1,<0.2",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.entry-points."cpex.plugins"]
pii_filter = "cpex_pii_filter.pii_filter:PIIFilterPlugin"

[tool.maturin]
module-name = "cpex_pii_filter.pii_filter_rust"
python-source = "."
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.12.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
