[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "cpex-retry-with-backoff"
dynamic = ["version"]
description = "High-performance retry and backoff policy engine for MCP Gateway"
authors = [{ name = "ContextForge Contributors" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cpex>=0.1.0rc1,<0.2",
    "pydantic>=2,<3",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.entry-points."cpex.plugins"]
retry_with_backoff = "cpex_retry_with_backoff.retry_with_backoff:RetryWithBackoffPlugin"

[tool.maturin]
module-name = "cpex_retry_with_backoff.retry_with_backoff_rust"
python-source = "."
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.12.6",
    "pydantic>=2,<3",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
