[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "cpex-secrets-detection"
dynamic = ["version"]
description = "Rust-backed secrets detection plugin for MCP Gateway"
authors = [{ name = "ContextForge Contributors" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.entry-points."cpex.plugins"]
secrets_detection = "cpex_secrets_detection.secrets_detection:SecretsDetectionPlugin"

[tool.maturin]
module-name = "cpex_secrets_detection.secrets_detection_rust"
python-source = "."
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "mcp-contextforge-gateway @ git+https://github.com/IBM/mcp-context-forge.git@v1.0.0-RC-3",
    "maturin>=1.12.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
