[package]
name = "url_reputation"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance URL reputation and phishing detection for MCP Gateway"

[lib]
name = "url_reputation_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
pyo3 = { workspace = true }
pyo3-log = { workspace = true }
