[package]
name = "url_reputation"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance URL reputation and phishing detection for MCP Gateway"

[lib]
name = "url_reputation_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
idna = "1.1.0"
log = "0.4"
phf = { version = "0.13.1", features = ["macros"] }
pyo3 = { workspace = true, features = ["abi3-py311"] }
pyo3-log = { workspace = true }
regex = "1.12.3"
unicode-script = "0.5.8"
unicode-security = "0.1.2"
url = "2.5.8"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "url_validation"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
