[package]
name = "url_reputation"
version = "0.3.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance URL reputation and phishing detection for MCP Gateway"

[lib]
name = "url_reputation_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
idna = "1.1.0"
log = { workspace = true }
phf = { version = "0.13.1", features = ["macros"] }
pyo3 = { workspace = true }
pyo3-log = { workspace = true }
regex = { workspace = true }
unicode-script = "0.5.8"
unicode-security = "0.1.2"
url = "2.5.8"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "url_validation"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
